infra/k3d/manifests/mcp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nogoo-mcp
  namespace: nogoo9
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nogoo9-mcp
  template:
    metadata:
      labels:
        app: nogoo9-mcp
    spec:
      serviceAccountName: nogoo-mcp
      containers:
        - name: mcp
          image: nogoo9-registry.localhost:5001/kube-mcp:latest
          securityContext:
            allowPrivilegeEscalation: false
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /nocr/healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /nocr/healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
